add blur background

--- a/css/styles.css
+++ b/css/styles.css
@@ -226,7 +226,7 @@ footer {
   height: 100vh;
   min-height: 500px;
   max-height: 1080px;
-  background: url(../images/lead-bg.jpg);
+  background: url(../images/lead-bg-blur.jpg);
   background-size: cover;
   padding: 15px;
   overflow: hidden;
@@ -271,7 +271,7 @@ footer {
   right: 0;
   bottom: 0;
   left: 0;
-  background: rgba(42, 74, 216, 0.85);
+  /* background: rgba(42, 74, 216, 0.85); */
   z-index: 1;
 }
 #lead-down {
